[package]
name = "atlrus"
version = "0.1.0"
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2.22", features = ["macros"] }
anyhow =  "1.0.32"
lazy_static = "1.4.0"
